--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Rock Paper Scissors
-        </title>
-    </head>
-    <body>
-        <script src="index.js"></script>
-    </body>
+<head>
+    <title>Rock Paper Scissors</title>
+    <style>
+        .container {
+            display: flex;
+            gap: 10px;
+            padding: 10px 5px;
+        }
+        .score {
+            width: 150px;
+            height: 50px;
+            background-color: blue;
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 10px 5px;
+            flex-direction: column; 
+            align-items: center; 
+            justify-content: center; 
+            text-align: center;
+        }
+        .score#computer {
+            background-color: red;
+        }
+    </style>
+</head>
+<body>
+    <h1>Let's play Rock Paper Scissors</h1>
+    <h3 class="result">Make your move!</h3>
+    <div class="container">
+        <div class="score" id="human">Your Score
+            <p>0</p>
+        </div>
+        <div class="score" id="computer">Computer Score
+            <p>0</p>
+        </div>
+    </div>
+    <div class="buttons">
+        <button id="rock" class="rock">Rock</button>
+        <button id="paper" class="paper">Paper</button>
+        <button id="scissors" class="scissors">Scissors</button>
+    </div>
+    <script src="index.js"></script>
+</body>
 </html>
